# models/reviewModel.js
@@ -1,0 +1,13 @@
+const mongoose = require("mongoose");
+
+const reviewSchema = new mongoose.Schema(
+  {
+    creator: { type: mongoose.Schema.Types.ObjectId, ref: "User" },
+    store: { type: mongoose.Schema.Types.ObjectId, ref: "stores" },
+    videoUrl: { type: String, required: true, unique: true },
+  },
+  { timestamps: true }
+);
+
+const Review = mongoose.model("review", reviewSchema);
+module.exports = Review;
